analysis-reports/build-analyze/scan-results/2025-08-14-070040-19782-1/failures/clang_other_error_rqITmx.i.stderr.txt
In file included from vm/memory_object_user.user.defs.c:28:
/home/runner/work/cognu-mach/cognu-mach/include/mach/memory_object.defs:33:1: error: unknown type name 'subsystem'
   33 | subsystem
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/memory_object.defs:35:14: error: expected ';' after top level declarator
   35 |           KernelUser
      |                     ^
      |                     ;
In file included from vm/memory_object_user.user.defs.c:28:
In file included from /home/runner/work/cognu-mach/cognu-mach/include/mach/memory_object.defs:42:
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:33:1: error: unknown type name 'type'
   33 | type int32_t = MACH_MSG_TYPE_INTEGER_32;
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:33:16: error: use of undeclared identifier 'MACH_MSG_TYPE_INTEGER_32'
   33 | type int32_t = MACH_MSG_TYPE_INTEGER_32;
      |                ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:34:1: error: unknown type name 'type'
   34 | type int64_t = MACH_MSG_TYPE_INTEGER_64;
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:34:16: error: use of undeclared identifier 'MACH_MSG_TYPE_INTEGER_64'
   34 | type int64_t = MACH_MSG_TYPE_INTEGER_64;
      |                ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:35:1: error: unknown type name 'type'
   35 | type boolean_t = MACH_MSG_TYPE_BOOLEAN;
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:35:18: error: use of undeclared identifier 'MACH_MSG_TYPE_BOOLEAN'
   35 | type boolean_t = MACH_MSG_TYPE_BOOLEAN;
      |                  ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:36:1: error: unknown type name 'type'
   36 | type unsigned = MACH_MSG_TYPE_INTEGER_32;
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:36:15: error: expected identifier or '('
   36 | type unsigned = MACH_MSG_TYPE_INTEGER_32;
      |               ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:37:1: error: unknown type name 'type'
   37 | type uint32_t = MACH_MSG_TYPE_INTEGER_32;
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:37:17: error: use of undeclared identifier 'MACH_MSG_TYPE_INTEGER_32'
   37 | type uint32_t = MACH_MSG_TYPE_INTEGER_32;
      |                 ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:38:1: error: unknown type name 'type'
   38 | type uint64_t = MACH_MSG_TYPE_INTEGER_64;
      | ^
/home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:38:17: error: use of undeclared identifier 'MACH_MSG_TYPE_INTEGER_64'
   38 | type uint64_t = MACH_MSG_TYPE_INTEGER_64;
      |                 ^
In file included from vm/memory_object_user.user.defs.c:28:
In file included from /home/runner/work/cognu-mach/cognu-mach/include/mach/memory_object.defs:42:
In file included from /home/runner/work/cognu-mach/cognu-mach/include/mach/std_types.defs:41:
./mach/machine/machine_types.defs:46:1: error: unknown type name 'type'
   46 | type natural_t = uint32_t;
      | ^
./mach/machine/machine_types.defs:55:1: error: unknown type name 'type'
   55 | type integer_t = int32_t;
      | ^
./mach/machine/machine_types.defs:69:1: error: unknown type name 'type'
   69 | type rpc_long_natural_t = uint32_t;
      | ^
./mach/machine/machine_types.defs:70:1: error: unknown type name 'type'
   70 | type rpc_long_integer_t = int32_t;
      | ^
./mach/machine/machine_types.defs:79:1: error: unknown type name 'type'
   79 | type long_natural_t = rpc_long_natural_t
      | ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
